Fix scrollbar horizontale

--- a/css/core.css
+++ b/css/core.css
@@ -2,6 +2,7 @@ body {
     background:#eee;
 }
 
+body main > .row,
 body > .row {
     margin-left:0;
     margin-right:0;
